# T2_OS

./: .env  .gitignore  CMakeLists.txt  README.md  makefile  openapi.json
include/: board.h  config.h  elo.h  matchmaker.h  monitor.h  player.h  snapshot.h
src/: board.c  config.c  elo.c  main.c  matchmaker.c  monitor.c  player.c  snapshot.c
